# ARF-Data-Processing-Public

./: .gitignore  README.md
web_scraping/arf-web-crawler/: README.md  keywords.txt  pyproject.toml  scrapy.cfg
web_scraping/arf-web-crawler/scraping_framework/: items.py  pipelines.py  settings.py
web_scraping/arf-web-crawler/scraping_framework/spiders/: bing_search_spider.py  sinar_harian_spider.py
web_scraping/targeted_language_scraper/: README.md  config.ini  languages.json  requirements.txt  run.py  scrapy.cfg
web_scraping/targeted_language_scraper/unified_scraper/: items.py  middlewares.py  pipelines.py  settings.py
web_scraping/targeted_language_scraper/unified_scraper/core/: config_generator.py  language_service.py
web_scraping/targeted_language_scraper/unified_scraper/spiders/: base_pdf_spider.py  discover.py  language_pdf.py  master_spider.py
